[tool.poetry]
name = "actual-working-better-ds-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

python-dotenv = "^0.17.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "feature/slash"}
flashtext = "^2.7"
pymongo = "^3.12.1"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
